--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
       </div>
     </div>
     <div id="entrytbale"></div>
-    <script src="./scriptjs.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
